Exercícios com Prática guiada e de Fixação da aula de CSS II

--- a/exercicio1/index.html
+++ b/exercicio1/index.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-    <h1>Sou um título GRANDÃO</h1>
+    <h1 class="teste-Leonardo">Sou um título GRANDÃO</h1>
     <h2>Sou um título GRANDE</h2>
     <h3>Sou um título MÉDIO</h3>
-    <h4>Sou um título PEQUENO</h4>
+    <h4 class="teste-Leonardo">Sou um título PEQUENO</h4>
     <h5>Sou um título PEQUENINO</h5>
     <h6>Sou um título MINÚSCULO</h6>
     <p>Sou um parágrafo</p>
