--- a/fixacao/index.html
+++ b/fixacao/index.html
@@ -18,10 +18,10 @@
         <aside>
             Sou absoluto no canto inferior direito.
         </aside>
-        <section>
+        <section class="section1">
             Não mudo de posição, mas meu texto é centralizado.
         </section>
-        <section>
+        <section class="section2">
             Se você clicar no botão aqui embaixo, eu fico verde.
             <br />
             <button>Clica aqui!</button>
